# hyperfetch

./: .codecarbon.config  .env  .gitignore  DDD.md  Dockerfile  LICENSE  Procfile  README.md  index.html  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  staticwebapp.config.json  utils.py  vite.config.js
.github/workflows/: azure-static-web-apps-mango-island-0ec915e03.yml  azure-static-web-apps-white-rock-097162f03.yml  master_hyperfetch-backend.yml
config/: auth_connection.py  tuning_parameters.yml
crud/: run_crud.py
hyper_fetch/: manager.py  tuning.py  util.py
hyperfetch/: __init__.py  alg_samplers.py  callbacks.py  manager.py  tuning.py
models/: base_model.py  create_run.py  environment.py  fields.py  model_errors.py  receive_run.py  run.py  user.py
optuna_tuning/: alg_samplers.py  callbacks.py  hp_config.yml  manager.py  tuning.py
public/assets/renderer/run/: trophy.avif
routes/: run_route.py
src/: .env  App.vue  main.js  tuning_parameters.yml
src/components/: AlgCellRenderer.js  Algs.vue  AlgsOverview.vue  NavBar.vue  Navigation.vue  Run.vue  RunCellRenderer.js  Runs.vue  RunsOverview.vue
src/components/renderers/: AlgCellRenderer.js  RunCellRenderer.js
src/config/: auth_connection.py  no_auth_connection.yml  tuning_parameters.yml
src/crud/: run_crud.py
src/dal/: dal_run.py
src/db_config/: auth_connection.py  mongodb.py
src/hyperfetch/: .codecarbon.config  auth_connection.py  callbacks.py  manager.py  tuning.py  tuning_parameters.yml  util.py
src/models/: create_run.py  fields.py  receive_run.py
src/router/: index.js
src/routes/: run_route.py
src/services/: service.js
src/store/: index.js
src/utils/: db_utils.py  exceptions.py  mapping.js
src/views/: About.vue  ConfigDocs.vue  Environment.vue  GetStarted.vue  LandingPage.vue  Overview.vue  UsingPip.vue
tests/: test_routes.py
utils/: common.py  db_utils.py  exceptions.py
